k8s/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vehicle-rental-prod
  labels:
    name: vehicle-rental-prod
    environment: production
