k8s/production/log-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-service
  namespace: vehicle-rental-prod
  labels:
    app: log-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: log-service
  template:
    metadata:
      labels:
        app: log-service
    spec:
      containers:
        - name: log-service
          image: mohammed761/backend-log-service:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: log-service
  namespace: vehicle-rental-prod
spec:
  selector:
    app: log-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
